--- a/package.json
+++ b/package.json
@@ -23,7 +23,15 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.55.0",
-    "concurrently": "^8.2.2"
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
+    "concurrently": "^8.2.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^30.0.5",
+    "jest-environment-jsdom": "^30.0.5",
+    "ts-jest": "^29.4.1"
   },
   "engines": {
     "node": ">=18.0.0",
