--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,8 +7,10 @@ python-dotenv==1.0.0
 sqlalchemy==2.0.25
 psycopg2-binary==2.9.9
 alembic==1.13.1
-pydantic==2.5.3
+pydantic[email]==2.5.3
 pydantic-settings==2.1.0
+email-validator==2.1.0
+pandas==2.1.4
 httpx==0.26.0
 google-auth==2.25.2
 google-auth-oauthlib==1.2.0
