--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -1,20 +1,20 @@
-name: Deploy to Staging
+name: Deploy to Production
 
 on:
   push:
-    branches: [ staging, develop ]
+    branches: [ main ]
   workflow_dispatch:
 
 env:
   PROJECT_ID: duotopia-469413
   REGION: asia-east1
-  BACKEND_SERVICE: duotopia-backend-staging
-  FRONTEND_SERVICE: duotopia-frontend-staging
+  BACKEND_SERVICE: duotopia-backend
+  FRONTEND_SERVICE: duotopia-frontend
 
 jobs:
   deploy-backend:
     runs-on: ubuntu-latest
-    environment: staging
+    environment: production
     steps:
     - uses: actions/checkout@v4
     
@@ -32,25 +32,28 @@ jobs:
     - name: 'Build and Push Backend'
       run: |
         cd backend
-        docker build -t ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/duotopia/backend:staging-${{ github.sha }} .
-        docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/duotopia/backend:staging-${{ github.sha }}
+        docker build -t ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/duotopia/backend:prod-${{ github.sha }} .
+        docker tag ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/duotopia/backend:prod-${{ github.sha }} \
+                   ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/duotopia/backend:latest
+        docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/duotopia/backend:prod-${{ github.sha }}
+        docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/duotopia/backend:latest
     
     - name: 'Deploy Backend to Cloud Run'
       run: |
         # Get database IP from Cloud SQL
-        DB_IP=$(gcloud sql instances describe duotopia-db-staging --format='value(ipAddresses[0].ipAddress)')
+        DB_IP=$(gcloud sql instances describe duotopia-db-production --format='value(ipAddresses[0].ipAddress)')
         
         # Deploy with all necessary environment variables
         gcloud run deploy ${{ env.BACKEND_SERVICE }} \
-          --image ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/duotopia/backend:staging-${{ github.sha }} \
+          --image ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/duotopia/backend:prod-${{ github.sha }} \
           --region ${{ env.REGION }} \
           --platform managed \
           --allow-unauthenticated \
           --service-account duotopia-backend@${{ env.PROJECT_ID }}.iam.gserviceaccount.com \
-          --set-env-vars "ENVIRONMENT=staging" \
+          --set-env-vars "ENVIRONMENT=production" \
           --set-env-vars "GCP_PROJECT_ID=${{ env.PROJECT_ID }}" \
           --set-env-vars "GCS_BUCKET_NAME=duotopia-469413-uploads" \
-          --set-env-vars "DATABASE_URL=postgresql://duotopia_user:DuotopiaStaging2024@${DB_IP}:5432/duotopia" \
+          --set-env-vars "DATABASE_URL=postgresql://duotopia_user:DuotopiaProd2024@${DB_IP}:5432/duotopia" \
           --set-secrets "JWT_SECRET=jwt-secret:latest" \
           --set-secrets "GOOGLE_CLIENT_ID=google-client-id:latest" \
           --set-secrets "GOOGLE_CLIENT_SECRET=google-client-secret:latest" \
@@ -59,13 +62,13 @@ jobs:
           --set-secrets "SECRET_KEY=jwt-secret:latest" \
           --memory 1Gi \
           --cpu 2 \
-          --max-instances 10 \
-          --min-instances 0
+          --max-instances 100 \
+          --min-instances 1
 
   deploy-frontend:
     runs-on: ubuntu-latest
     needs: deploy-backend
-    environment: staging
+    environment: production
     steps:
     - uses: actions/checkout@v4
     
@@ -89,19 +92,22 @@ jobs:
     - name: 'Build and Push Frontend'
       run: |
         cd frontend
-        docker build -t ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/duotopia/frontend:staging-${{ github.sha }} \
+        docker build -t ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/duotopia/frontend:prod-${{ github.sha }} \
           --build-arg VITE_API_URL=${{ steps.backend_url.outputs.url }} \
           .
-        docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/duotopia/frontend:staging-${{ github.sha }}
+        docker tag ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/duotopia/frontend:prod-${{ github.sha }} \
+                   ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/duotopia/frontend:latest
+        docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/duotopia/frontend:prod-${{ github.sha }}
+        docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/duotopia/frontend:latest
     
     - name: 'Deploy Frontend to Cloud Run'
       run: |
         gcloud run deploy ${{ env.FRONTEND_SERVICE }} \
-          --image ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/duotopia/frontend:staging-${{ github.sha }} \
+          --image ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/duotopia/frontend:prod-${{ github.sha }} \
           --region ${{ env.REGION }} \
           --platform managed \
           --allow-unauthenticated \
           --memory 512Mi \
           --cpu 1 \
-          --max-instances 10 \
-          --min-instances 0
+          --max-instances 100 \
+          --min-instances 1
