--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -9,16 +9,17 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first for better caching
-COPY requirements.txt .
+COPY backend/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy backend code
-COPY . .
+# Copy backend code and shared
+COPY backend/ .
+COPY shared/ /shared/
 
 # Run migrations and start server
-ENV PYTHONPATH=/app
+ENV PYTHONPATH=/app:/shared
+ENV PORT=8000
 
-EXPOSE 8080
+EXPOSE 8000
 
-# Cloud Run 會設定 PORT 環境變數，使用它
-CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8080}"]
+CMD ["sh", "-c", "alembic upgrade head && uvicorn main:app --host 0.0.0.0 --port $PORT"]
