--- a/frontend/nginx.conf.template
+++ b/frontend/nginx.conf.template
@@ -1,17 +1,26 @@
 server {
-    listen $PORT;
+    listen ${PORT};
+    server_name _;
     
-    location / {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
+    root /usr/share/nginx/html;
+    index index.html;
+    
+    # Enable gzip
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 10240;
+    gzip_proxied expired no-cache no-store private auth;
+    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml application/javascript;
+    gzip_disable "MSIE [1-6]\.";
+    
+    # Cache static assets
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
     }
     
-    location /api {
-        proxy_pass $VITE_API_URL;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+    # SPA fallback
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 }
