--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
     "dev:frontend": "npm run dev --workspace=frontend",
     "dev:backend": "npm run dev --workspace=backend",
-    "build": "npm run build:shared && npm run build:frontend && npm run build:backend",
+    "build": "npm run build:shared && npm run build:frontend",
     "build:shared": "npm run build --workspace=shared",
     "build:frontend": "npm run build --workspace=frontend",
-    "build:backend": "npm run build --workspace=backend",
     "start": "npm run start --workspace=backend",
     "test": "npm run test --workspaces --if-present",
     "lint": "npm run lint --workspaces --if-present",
