fix: use secret reference for JWT_SECRET in Cloud Run
- Change from string literal to secret reference
- Use existing jwt-secret from Secret Manager

--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -89,7 +89,7 @@ jobs:
             --max-instances 10 \
             --set-env-vars "ENVIRONMENT=staging" \
             --set-env-vars "DATABASE_URL=${{ secrets.DATABASE_URL }}" \
-            --set-env-vars "JWT_SECRET=${{ secrets.JWT_SECRET }}" \
+            --update-secrets "JWT_SECRET=jwt-secret:latest" \
             --set-env-vars "GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}" \
             --set-env-vars "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" \
             --set-env-vars "GCP_PROJECT_ID=$PROJECT_ID"
