feat: implement proper environment separation
- Add .env.example for environment variable documentation
- Create ENV_MANAGEMENT.md with detailed secret management guide
- Update deploy-staging.yml to use database-url-staging secret
- Ensure .env files are gitignored
- Separate staging and production configurations

--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -88,7 +88,7 @@ jobs:
             --timeout 60 \
             --max-instances 10 \
             --set-env-vars "ENVIRONMENT=staging" \
-            --set-env-vars "DATABASE_URL=${{ secrets.DATABASE_URL }}" \
+            --update-secrets "DATABASE_URL=database-url-staging:latest" \
             --update-secrets "JWT_SECRET=jwt-secret:latest" \
             --update-secrets "GOOGLE_CLIENT_ID=google-client-id:latest,GOOGLE_CLIENT_SECRET=google-client-secret:latest" \
             --set-env-vars "GCP_PROJECT_ID=$PROJECT_ID"
