--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,38 @@
-# Duotopia Environment Variables Example
-# Copy this file to .env and update with your actual values
-# NEVER commit .env file to version control
+# Duotopia 環境變數範例
+# 複製此檔案為 .env.staging 或 .env.production 並填入實際值
+# 注意：.env* 檔案已加入 .gitignore，不會被提交
 
-# GCP Configuration
+# ===== 環境設定 =====
+ENVIRONMENT=staging  # staging | production
+
+# ===== 資料庫連線 =====
+# Staging: 35.221.172.134
+# Production: 35.201.201.210
+DATABASE_URL=postgresql://duotopia_user:password@host:5432/duotopia
+
+# ===== JWT 認證 =====
+JWT_SECRET=your-jwt-secret-key-here
+
+# ===== Google OAuth =====
+GOOGLE_CLIENT_ID=your-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-client-secret
+
+# ===== GCP 專案設定 =====
 GCP_PROJECT_ID=duotopia-469413
+GCP_REGION=asia-east1
 
-# Database Configuration (for docker-compose)
-DB_PASSWORD=your-secure-database-password
+# ===== 儲存空間 =====
+GCS_BUCKET_UPLOADS=duotopia-469413-uploads
+GCS_BUCKET_STATIC=duotopia-469413-static
 
-# Frontend Configuration (if needed at root level)
-VITE_API_URL=http://localhost:8000
+# ===== API Keys (如需要) =====
+# OPENAI_API_KEY=sk-...
+# SENDGRID_API_KEY=SG...
 
-# Note: Backend specific variables should go in backend/.env
-# Note: Frontend specific variables should go in frontend/.env
+# ===== Service Account (本地開發用) =====
+# GOOGLE_APPLICATION_CREDENTIALS=/path/to/service-account-key.json
+
+# ===== 前端 API URL =====
+# Staging: https://duotopia-backend-staging-qchnzlfpda-de.a.run.app
+# Production: https://duotopia-backend-qchnzlfpda-de.a.run.app
+VITE_API_URL=https://duotopia-backend-staging-qchnzlfpda-de.a.run.app
