--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -18,8 +18,9 @@ COPY shared/ /shared/
 
 # Run migrations and start server
 ENV PYTHONPATH=/app:/shared
-ENV PORT=8000
+# Cloud Run sets PORT environment variable, default to 8080
+ENV PORT=8080
 
-EXPOSE 8000
+EXPOSE 8080
 
-CMD ["sh", "-c", "alembic upgrade head && uvicorn main:app --host 0.0.0.0 --port $PORT"]
+CMD ["sh", "-c", "alembic upgrade head && uvicorn main:app --host 0.0.0.0 --port ${PORT:-8080}"]
