--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -28,7 +28,9 @@ jobs:
 
     - name: Install frontend dependencies
       working-directory: ./frontend
-      run: npm ci
+      run: |
+        npm config set registry https://registry.npmmirror.com
+        npm ci --prefer-offline --no-audit
 
     - name: Run frontend type check
       working-directory: ./frontend
