--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -103,7 +103,8 @@ jobs:
     - name: Get backend URL and create .env
       working-directory: ./frontend
       run: |
-        BACKEND_URL=$(gcloud run services describe $BACKEND_SERVICE --platform managed --region $REGION --format 'value(status.url)')
+        # 使用固定的 URL 格式（因為服務名稱是固定的）
+        BACKEND_URL="https://duotopia-staging-backend-206313737181.asia-east1.run.app"
         echo "VITE_API_URL=$BACKEND_URL" > .env
         echo "Created .env with VITE_API_URL=$BACKEND_URL"
     
