--- a/frontend/Dockerfile.staging
+++ b/frontend/Dockerfile.staging
@@ -21,6 +21,9 @@ FROM nginx:alpine
 # 複製建置結果
 COPY --from=builder /app/dist /usr/share/nginx/html
 
+# 複製 nginx 配置（處理 SPA 路由）
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 # 暴露端口
 EXPOSE 80
 
