--- a/.github/workflows/deploy-staging-supabase.yml
+++ b/.github/workflows/deploy-staging-supabase.yml
@@ -107,9 +107,10 @@ jobs:
         DATABASE_URL: ${{ steps.db_env.outputs.ALEMBIC_DATABASE_URL }}
       run: |
         echo "🔍 Installing dependencies for migration check..."
-        pip install -r requirements.txt
+        pip install -r backend/requirements.txt
         
         echo "🔍 Checking for uncommitted model changes..."
+        cd backend
         if ! alembic check; then
           echo "❌ ERROR: Database models have changed but no migration was created!"
           echo "📝 Please run the following command locally:"
@@ -124,6 +125,7 @@ jobs:
         DATABASE_URL: ${{ steps.db_env.outputs.ALEMBIC_DATABASE_URL }}
       run: |
         echo "🔄 Running Alembic database migrations..."
+        cd backend
         echo "📊 Current migration status:"
         alembic current
         echo "🔄 Upgrading to latest migration..."
