test: add comprehensive tests for unassigned student visibility
- Test warning message when creating student without classroom
- Test 24-hour visibility window for unassigned students
- Test that old unassigned students don't appear
- Test that assigned students always appear
- Fixed .gitignore to only exclude test_*.py in root, not in tests/ folders

Following TDD best practices as per CLAUDE.md

--- a/.gitignore
+++ b/.gitignore
@@ -50,7 +50,7 @@ Thumbs.db
 # Temporary files and test artifacts
 tmp/
 *.png
-test_*.py
+/test_*.py  # Only ignore test files in root directory, not in tests/ folders
 
 # Logs
 *.log
