feat: 配置 staging 環境的 email 發送功能
- 添加 SMTP 設定到 .env.staging
- 設定 GitHub secrets (SMTP_HOST, SMTP_PORT, SMTP_USER, SMTP_PASSWORD, FROM_EMAIL, FROM_NAME, FRONTEND_URL)
- 更新 deploy-staging-supabase.yml workflow 以使用 email secrets
- 現在 staging 環境可以發送驗證郵件了

--- a/.github/workflows/deploy-staging-supabase.yml
+++ b/.github/workflows/deploy-staging-supabase.yml
@@ -277,6 +277,13 @@ jobs:
         ENV_VARS="$ENV_VARS,SUPABASE_URL=${{ steps.db_env.outputs.SUPABASE_URL }}"
         ENV_VARS="$ENV_VARS,SUPABASE_KEY=${{ steps.db_env.outputs.SUPABASE_KEY }}"
         ENV_VARS="$ENV_VARS,OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}"
+        ENV_VARS="$ENV_VARS,SMTP_HOST=${{ secrets.SMTP_HOST }}"
+        ENV_VARS="$ENV_VARS,SMTP_PORT=${{ secrets.SMTP_PORT }}"
+        ENV_VARS="$ENV_VARS,SMTP_USER=${{ secrets.SMTP_USER }}"
+        ENV_VARS="$ENV_VARS,SMTP_PASSWORD=${{ secrets.SMTP_PASSWORD }}"
+        ENV_VARS="$ENV_VARS,FROM_EMAIL=${{ secrets.FROM_EMAIL }}"
+        ENV_VARS="$ENV_VARS,FROM_NAME=${{ secrets.FROM_NAME }}"
+        ENV_VARS="$ENV_VARS,FRONTEND_URL=${{ secrets.FRONTEND_URL }}"
 
         gcloud run deploy $BACKEND_SERVICE \
           --image $REGION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$BACKEND_SERVICE:$GITHUB_SHA \
