fix: 修正 cleanup-resources.yml repository 名稱從 cloud-run-source-deploy 改為 duotopia-repo
問題：CI/CD 清理沒有生效，因為 repository 名稱設定錯誤
修正：將 REPOSITORY 環境變數從 'cloud-run-source-deploy' 改為實際存在的 'duotopia-repo'

--- a/.github/workflows/cleanup-resources.yml
+++ b/.github/workflows/cleanup-resources.yml
@@ -32,7 +32,7 @@ on:
 env:
   PROJECT_ID: duotopia-469413
   REGION: asia-east1
-  REPOSITORY: cloud-run-source-deploy
+  REPOSITORY: duotopia-repo
 
 jobs:
   cleanup-cloud-run:
