fix: 修正 Artifact Registry 映像檔清理失敗問題
問題：
- 使用錯誤的刪除格式 (:sha256:xxx 應該是 @sha256:xxx)
- 沒有處理有 tag 的映像檔

修正：
- 將刪除命令從 :VERSION 改為 @VERSION (正確的 digest 格式)
- 加入 --delete-tags 參數自動刪除相關 tags

驗證：
- 實測成功刪除映像檔 (29->28)
- 確認 @ 格式正確識別映像檔

--- a/.github/workflows/cleanup-resources.yml
+++ b/.github/workflows/cleanup-resources.yml
@@ -157,7 +157,7 @@ jobs:
           KEEP_COUNT=${{ github.event.inputs.keep_images || '2' }}
           echo "📌 Will keep $KEEP_COUNT most recent images"
 
-          # 列出所有 backend images
+          # 列出所有 backend images (使用 digest 格式)
           IMAGES=$(gcloud artifacts docker images list \
             ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/duotopia-staging-backend \
             --format="value(version)" \
@@ -179,9 +179,11 @@ jobs:
 
             for VERSION in $TO_DELETE; do
               echo "  Deleting: $VERSION"
+              # 注意：version 欄位返回的是 sha256:xxx 格式，需要用 @ 符號
+              # 使用 --delete-tags 來刪除所有相關的 tags
               gcloud artifacts docker images delete \
-                ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/duotopia-staging-backend:$VERSION \
-                --quiet || echo "  ⚠️ Failed to delete $VERSION"
+                ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/duotopia-staging-backend@$VERSION \
+                --delete-tags --quiet || echo "  ⚠️ Failed to delete $VERSION"
             done
 
             echo "✅ Backend images cleanup complete!"
@@ -196,6 +198,7 @@ jobs:
           KEEP_COUNT=${{ github.event.inputs.keep_images || '2' }}
           echo "📌 Will keep $KEEP_COUNT most recent images"
 
+          # 列出所有 frontend images (使用 digest 格式)
           IMAGES=$(gcloud artifacts docker images list \
             ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/duotopia-staging-frontend \
             --format="value(version)" \
@@ -217,9 +220,11 @@ jobs:
 
             for VERSION in $TO_DELETE; do
               echo "  Deleting: $VERSION"
+              # 注意：version 欄位返回的是 sha256:xxx 格式，需要用 @ 符號
+              # 使用 --delete-tags 來刪除所有相關的 tags
               gcloud artifacts docker images delete \
-                ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/duotopia-staging-frontend:$VERSION \
-                --quiet || echo "  ⚠️ Failed to delete $VERSION"
+                ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/duotopia-staging-frontend@$VERSION \
+                --delete-tags --quiet || echo "  ⚠️ Failed to delete $VERSION"
             done
 
             echo "✅ Frontend images cleanup complete!"
