--- a/.github/workflows/cleanup-resources.yml
+++ b/.github/workflows/cleanup-resources.yml
@@ -180,10 +180,10 @@ jobs:
             for VERSION in $TO_DELETE; do
               echo "  Deleting: $VERSION"
               # 注意：version 欄位返回的是 sha256:xxx 格式，需要用 @ 符號
-              # 使用 --delete-tags 來刪除所有相關的 tags
+              # 移除 --delete-tags 避免權限問題，只刪除 digest
               gcloud artifacts docker images delete \
                 ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/duotopia-staging-backend@$VERSION \
-                --delete-tags --quiet || echo "  ⚠️ Failed to delete $VERSION"
+                --quiet || echo "  ⚠️ Failed to delete $VERSION"
             done
 
             echo "✅ Backend images cleanup complete!"
@@ -221,10 +221,10 @@ jobs:
             for VERSION in $TO_DELETE; do
               echo "  Deleting: $VERSION"
               # 注意：version 欄位返回的是 sha256:xxx 格式，需要用 @ 符號
-              # 使用 --delete-tags 來刪除所有相關的 tags
+              # 移除 --delete-tags 避免權限問題，只刪除 digest
               gcloud artifacts docker images delete \
                 ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/duotopia-staging-frontend@$VERSION \
-                --delete-tags --quiet || echo "  ⚠️ Failed to delete $VERSION"
+                --quiet || echo "  ⚠️ Failed to delete $VERSION"
             done
 
             echo "✅ Frontend images cleanup complete!"
